--- a/argocd/media-server/maintainerr/kustomization.yaml
+++ b/argocd/media-server/maintainerr/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 resources:
   - manifests/sts.yaml
   - manifests/svc.yaml
-  - manifests/http-route.yaml
+ # - manifests/http-route.yaml
 
