ittools to internal

--- a/argocd/it-tools/manifests/http-route.yaml
+++ b/argocd/it-tools/manifests/http-route.yaml
@@ -16,7 +16,7 @@ spec:
       namespace: cilium
       sectionName: https
   hostnames:
-    - tools.yanello.net
+    - tools.yanello.internal
   rules:
     - backendRefs:
         - name: it-tools
