--- a/argocd/infra/cilium/manifests/bgp.yaml
+++ b/argocd/infra/cilium/manifests/bgp.yaml
@@ -13,7 +13,7 @@ metadata:
   name: config
 spec:
   bgpInstances:
-  - name: "instance-65001"
+  - name: "cilium-instance"
     localASN: 64513
     peers:
     - name: opnsense
@@ -56,3 +56,12 @@ spec:
       service:
         addresses:
           - LoadBalancerIP
+---
+apiVersion: "cilium.io/v2alpha1"
+kind: CiliumLoadBalancerIPPool
+metadata:
+  name: "pool"
+spec:
+  allowFirstLastIPs: "No"
+  blocks:
+    - cidr: "10.10.12.0/22"
