--- a/argocd/infra/cilium/manifests/bgp.yaml
+++ b/argocd/infra/cilium/manifests/bgp.yaml
@@ -5,55 +5,55 @@ metadata:
 spec:
   cidrs:
   - cidr: "10.10.12.0/22"
----
-apiVersion: "cilium.io/v2alpha1"
-kind: CiliumBGPClusterConfig
-# Defines bgp config for 1+ nodes in the cluster 
-metadata:
-  name: config
-spec:
-  bgpInstances:
-  - name: "cilium-instance"
-    localASN: 64513
-    peers:
-    - name: opnsense
-      peerASN: 65551
-      peerAddress: 192.168.10.1
-      peerConfigRef:
-        name: opn-peer # matches CiliumBGPPeerConfig
----
-apiVersion: cilium.io/v2
-kind: CiliumBGPPeerConfig
-metadata:
-  name: opn-peer
-spec:
-  timers:
-    holdTimeSeconds: 9
-    keepAliveTimeSeconds: 3
-    connectRetryTimeSeconds: 5
- # authSecretRef: bgp-auth-secret # configs tcp md5 password
-  # ebgpMultihop: 4 # specify ttl
-  gracefulRestart:
-    enabled: true
-    restartTimeSeconds: 15
-  families:
-    - afi: ipv4
-      safi: unicast
-      advertisements:
-        matchLabels:
-          advertise: "bgp"
----
-apiVersion: "cilium.io/v2alpha1"
-kind: CiliumBGPAdvertisement
-metadata:
-  name: services
-  labels:
-    advertise: generic
-spec:
-  advertisements:
-    - advertisementType: "PodCIDR"
-    - advertisementType: "Service"
-      service:
-        addresses:
-          - LoadBalancerIP
----
+# ---
+# apiVersion: "cilium.io/v2alpha1"
+# kind: CiliumBGPClusterConfig
+# # Defines bgp config for 1+ nodes in the cluster 
+# metadata:
+#   name: config
+# spec:
+#   bgpInstances:
+#   - name: "cilium-instance"
+#     localASN: 64513
+#     peers:
+#     - name: opnsense
+#       peerASN: 65551
+#       peerAddress: 192.168.10.1
+#       peerConfigRef:
+#         name: opn-peer # matches CiliumBGPPeerConfig
+# ---
+# apiVersion: cilium.io/v2
+# kind: CiliumBGPPeerConfig
+# metadata:
+#   name: opn-peer
+# spec:
+#   timers:
+#     holdTimeSeconds: 9
+#     keepAliveTimeSeconds: 3
+#     connectRetryTimeSeconds: 5
+#  # authSecretRef: bgp-auth-secret # configs tcp md5 password
+#   # ebgpMultihop: 4 # specify ttl
+#   gracefulRestart:
+#     enabled: true
+#     restartTimeSeconds: 15
+#   families:
+#     - afi: ipv4
+#       safi: unicast
+#       advertisements:
+#         matchLabels:
+#           advertise: "bgp"
+# ---
+# apiVersion: "cilium.io/v2alpha1"
+# kind: CiliumBGPAdvertisement
+# metadata:
+#   name: services
+#   labels:
+#     advertise: generic
+# spec:
+#   advertisements:
+#     - advertisementType: "PodCIDR"
+#     - advertisementType: "Service"
+#       service:
+#         addresses:
+#           - LoadBalancerIP
+# ---
