disable cilium resources

--- a/argocd/infra/cilium/kustomization.yaml
+++ b/argocd/infra/cilium/kustomization.yaml
@@ -4,8 +4,8 @@ kind: Kustomization
 resources:
   #- https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.2.1/standard-install.yaml
   - manifests/cert.yaml
-  - manifests/gateway.yaml
-  - manifests/bgp.yaml
+  # - manifests/gateway.yaml
+  # - manifests/bgp.yaml
 
 helmCharts:
   - name: cilium
