--- a/argocd/infra/istio/resources/istio-gw.yaml
+++ b/argocd/infra/istio/resources/istio-gw.yaml
@@ -3,6 +3,8 @@ kind: Gateway
 metadata:
   name: gateway-api
 spec:
+  service:
+    externalTrafficPolicy: local
   addresses:
     - value: 10.10.8.1 # the ip of the load balancer service
       type: IPAddress
