--- a/argocd/infra/metallb/app.yaml
+++ b/argocd/infra/metallb/app.yaml
@@ -7,12 +7,12 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  # ignoreDifferences:
-  #   - group: apiextensions.k8s.io/v1
-  #     kind: CustomResourceDefinition
-  #     name: bgppeers.metallb.io
-  #     jqPathExpressions:
-  #       - .spec.versions[] | select(.name == "validation.istio.io") | .failurePolicy
+  ignoreDifferences:
+    - group: apiextensions.k8s.io/v1
+      kind: CustomResourceDefinition
+      name: bgppeers.metallb.io
+      jqPathExpressions:
+        - .spec.versions[] | select(.name == "validation.istio.io") | .failurePolicy
   destination:
     name: in-cluster
     namespace: manifests
