--- a/argocd/dev/bookinfo/kustomization.yaml
+++ b/argocd/dev/bookinfo/kustomization.yaml
@@ -8,8 +8,10 @@ labels:
   
 resources:
   - ./platform/kube/bookinfo.yaml
+  - ./gateway-api/bookinfo-gateway.yaml
+  - ./gateway-api/route-all-v1.yaml
   #- ./platform/kube/bookinfo-ingress.yaml
   #- ./platform/kube/bookinfo-certificate.yaml
-  - ./networking/fault-injection-details-v1.yaml
-  - ./networking/virtual-service-reviews-v2-v3.yaml
-  - ./networking/destination-rule-reviews.yaml
+ # - ./networking/fault-injection-details-v1.yaml
+ # - ./networking/virtual-service-reviews-v2-v3.yaml
+  #- ./networking/destination-rule-reviews.yaml
