--- a/argocd/dev/bookinfo/kustomization.yaml
+++ b/argocd/dev/bookinfo/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 labels:
-  - includeSelectors: true
+  - includeSelectors: false
     pairs:
       backstage.io/kubernetes-id: bookinfo-dev
       istio-injection: enable
