--- a/argocd/dev/mtls-test-legacy/ns.yaml
+++ b/argocd/dev/mtls-test-legacy/ns.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: mtls-test-legacy
+  name: mtls-test-legacy-dev
   labels:
     istio-injection: disabled
