--- a/argocd/infra/metallb/app.yaml
+++ b/argocd/infra/metallb/app.yaml
@@ -11,9 +11,8 @@ spec:
     - group: apiextensions.k8s.io/v1
       kind: CustomResourceDefinition
       name: bgppeers.metallb.io
-      jqPathExpressions:
-        - .spec.versions[] | select(.name == "validation.istio.io") | .failurePolicy
-        - .spec.conversion.webhook.clientConfig.caBundle
+      jsonPointers:
+        - /spec/conversion/webhook/clientConfig/caBundle
   destination:
     name: in-cluster
     namespace: manifests
