--- a/argocd/dev/foo/kustomization.yaml
+++ b/argocd/dev/foo/kustomization.yaml
@@ -6,3 +6,4 @@ labels:
 resources:
 - https://raw.githubusercontent.com/istio/istio/release-1.26/samples/httpbin/httpbin.yaml
 - https://raw.githubusercontent.com/istio/istio/release-1.26/samples/curl/curl.yaml
+- peerauth.yaml
