--- a/argocd/infra/istio/resources/istio-gw.yaml
+++ b/argocd/infra/istio/resources/istio-gw.yaml
@@ -2,6 +2,11 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: gateway-api
+spec:
+  infrastructure:
+    parametersRef:
+      service:
+        externalTrafficPolicy: local
   addresses:
     - value: 10.10.8.1 # the ip of the load balancer service
       type: IPAddress
