--- a/argocd/infra/esops/manifests/secretstore.yaml
+++ b/argocd/infra/esops/manifests/secretstore.yaml
@@ -12,6 +12,7 @@ spec:
           credentials:
             key: token
             name: bw-secrets
+            namespace: esops
       bitwardenServerSDKURL: https://bitwarden-sdk-server.default.svc.cluster.local:9998
       organizationID: e639f4d9-bd5b-4f00-955a-b2630105d720
       projectID: 29313e25-76a3-437d-b600-b2e500ddad85
