--- a/argocd/paperless/manifests/esecret.yaml
+++ b/argocd/paperless/manifests/esecret.yaml
@@ -6,7 +6,7 @@ spec:
   refreshInterval: 1h
   secretStoreRef:
     name: bitwarden-secretsmanager
-    kind: SecretStore
+    kind: ClusterSecretStore
   target:
     name: secret-to-be-created
     creationPolicy: Owner
