--- a/argocd/infra/esops/manifests/certificate.yaml
+++ b/argocd/infra/esops/manifests/certificate.yaml
@@ -18,8 +18,8 @@ spec:
     organizations:
       - external-secrets.io
   dnsNames:
-    - external-secrets-bitwarden-sdk-server.default.svc.cluster.local
-    - bitwarden-sdk-server.default.svc.cluster.local
+    - external-secrets-bitwarden-sdk-server.esops.svc.cluster.local
+    - bitwarden-sdk-server.esops.svc.cluster.local
     - localhost
   ipAddresses:
     - 127.0.0.1
