--- a/argocd/infra/esops/manifests/certificate.yaml
+++ b/argocd/infra/esops/manifests/certificate.yaml
@@ -1,5 +1,5 @@
 apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
+kind: Issuer
 metadata:
   name: bitwarden-bootstrap-issuer
 spec:
@@ -30,11 +30,11 @@ spec:
     size: 2048
   issuerRef:
     name: bitwarden-bootstrap-issuer
-    kind: ClusterIssuer
+    kind: Issuer
     group: cert-manager.io
 ---
 apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
+kind: Issuer
 metadata:
   name: bitwarden-certificate-issuer
 spec:
