--- a/argocd/dev/dollardollar-dev/kustomization.yaml
+++ b/argocd/dev/dollardollar-dev/kustomization.yaml
@@ -4,8 +4,8 @@ kind: Kustomization
 resources:
   #- ./manifests/sts.yaml
  # - ./manifests/deploy.yaml
-  - ./manifests/svc.yaml
-  - ./manifests/http-route.yaml
+  #- ./manifests/svc.yaml
+  #- ./manifests/http-route.yaml
   
 generators:
   - ./manifests/secret-generator.yaml
