tolerate control plane for some infra pods

--- a/argocd/infra/authentik/manifests/values.yaml
+++ b/argocd/infra/authentik/manifests/values.yaml
@@ -11,6 +11,11 @@ global:
                       operator: In
                       values:
                         - amd64
+  tolerations:
+    - key: "node-role.kubernetes.io/control-plane"
+      operator: "Exists"
+      effect: "NoSchedule"
+
 authentik:
   email:
     host: smtp.gmail.com
