--- a/argocd/infra/esops/kustomization.yaml
+++ b/argocd/infra/esops/kustomization.yaml
@@ -17,3 +17,9 @@ helmCharts:
     valuesInline:
       bitwarden-sdk-server:
         enabled: true
+      global:
+        tolerations:
+          - key: "node-role.kubernetes.io/control-plane"
+            operator: "Exists"
+            effect: "NoSchedule"
+      
