tolerate control plane for some infra pods2

--- a/argocd/infra/renovate/values.yaml
+++ b/argocd/infra/renovate/values.yaml
@@ -102,7 +102,11 @@ affinity:
               operator: In
               values:
                 - amd64
-
+tolerations:
+  - key: "node-role.kubernetes.io/control-plane"
+    operator: "Exists"
+    effect: "NoSchedule"
+  
 service:
   port: 8080
 
