--- a/argocd/infra/renovate/values.yaml
+++ b/argocd/infra/renovate/values.yaml
@@ -7,7 +7,7 @@ renovate:
   mendRnvCronJobSchedulerAll: "0 0 * * *"
   extraEnvVars:
     - name: LOG_LEVEL
-      value: info
+      value: debug
   config: |
     module.exports = {
       "extends": [
