--- a/.github/workflows/argo-diff.yaml
+++ b/.github/workflows/argo-diff.yaml
@@ -23,6 +23,15 @@ jobs:
           ref: main
           path: main
 
+      - name: Set Argo CD Custom Values
+        run: |
+          cat > values.yaml << "EOF"
+          # set whatever helm values you want
+          configs:
+            cm:
+              kustomize.buildOptions: --enable-helm --enable-alpha-plugins --enable-exec
+          EOF
+
       - name: Generate Diff
         run: |
           docker run \
@@ -31,6 +40,7 @@ jobs:
             -v $(pwd)/main:/base-branch \
             -v $(pwd)/pull-request:/target-branch \
             -v $(pwd)/output:/output \
+            -v $(pwd)/values.yaml:/argocd-config/values.yaml \
             -e TARGET_BRANCH=refs/pull/${{ github.event.number }}/merge \
             -e REPO=${{ github.repository }} \
             dagandersen/argocd-diff-preview:v0.1.9
