--- a/argocd/infra/cilium/kustomization.yaml
+++ b/argocd/infra/cilium/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   #- https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.2.1/standard-install.yaml
   - manifests/cert.yaml
   - manifests/gateway.yaml
-  - manifests/bgp.yaml
+  #- manifests/bgp.yaml
 
 helmCharts:
   - name: cilium
