--- a/argocd/infra/cilium/manifests/bgp.yaml
+++ b/argocd/infra/cilium/manifests/bgp.yaml
@@ -22,38 +22,38 @@ spec:
       peerConfigRef:
         name: opn-peer # matches CiliumBGPPeerConfig
 ---
-apiVersion: cilium.io/v2
-kind: CiliumBGPPeerConfig
-metadata:
-  name: opn-peer
-spec:
-  timers:
-    holdTimeSeconds: 9
-    keepAliveTimeSeconds: 3
-    connectRetryTimeSeconds: 5
- # authSecretRef: bgp-auth-secret # configs tcp md5 password
-  # ebgpMultihop: 4 # specify ttl
-  gracefulRestart:
-    enabled: true
-    restartTimeSeconds: 15
-  families:
-    - afi: ipv4
-      safi: unicast
-      advertisements:
-        matchLabels:
-          advertise: "bgp"
----
-apiVersion: "cilium.io/v2alpha1"
-kind: CiliumBGPAdvertisement
-metadata:
-  name: services
-  labels:
-    advertise: generic
-spec:
-  advertisements:
-    - advertisementType: "PodCIDR"
-    - advertisementType: "Service"
-      service:
-        addresses:
-          - LoadBalancerIP
----
+# apiVersion: cilium.io/v2
+# kind: CiliumBGPPeerConfig
+# metadata:
+#   name: opn-peer
+# spec:
+#   timers:
+#     holdTimeSeconds: 9
+#     keepAliveTimeSeconds: 3
+#     connectRetryTimeSeconds: 5
+#  # authSecretRef: bgp-auth-secret # configs tcp md5 password
+#   # ebgpMultihop: 4 # specify ttl
+#   gracefulRestart:
+#     enabled: true
+#     restartTimeSeconds: 15
+#   families:
+#     - afi: ipv4
+#       safi: unicast
+#       advertisements:
+#         matchLabels:
+#           advertise: "bgp"
+# ---
+# apiVersion: "cilium.io/v2alpha1"
+# kind: CiliumBGPAdvertisement
+# metadata:
+#   name: services
+#   labels:
+#     advertise: generic
+# spec:
+#   advertisements:
+#     - advertisementType: "PodCIDR"
+#     - advertisementType: "Service"
+#       service:
+#         addresses:
+#           - LoadBalancerIP
+# ---
