--- a/argocd/infra/cilium/manifests/bgp.yaml
+++ b/argocd/infra/cilium/manifests/bgp.yaml
@@ -5,23 +5,23 @@ metadata:
 spec:
   cidrs:
   - cidr: "10.10.12.0/22"
----
-apiVersion: "cilium.io/v2alpha1"
-kind: CiliumBGPClusterConfig
-# Defines bgp config for 1+ nodes in the cluster 
-metadata:
-  name: config
-spec:
-  bgpInstances:
-  - name: "cilium-instance"
-    localASN: 64513
-    peers:
-    - name: opnsense
-      peerASN: 65551
-      peerAddress: 192.168.10.1
-      peerConfigRef:
-        name: opn-peer # matches CiliumBGPPeerConfig
----
+# ---
+# apiVersion: "cilium.io/v2alpha1"
+# kind: CiliumBGPClusterConfig
+# # Defines bgp config for 1+ nodes in the cluster 
+# metadata:
+#   name: config
+# spec:
+#   bgpInstances:
+#   - name: "cilium-instance"
+#     localASN: 64513
+#     peers:
+#     - name: opnsense
+#       peerASN: 65551
+#       peerAddress: 192.168.10.1
+#       peerConfigRef:
+#         name: opn-peer # matches CiliumBGPPeerConfig
+# ---
 # apiVersion: cilium.io/v2
 # kind: CiliumBGPPeerConfig
 # metadata:
