--- a/argocd/infra/cilium/values.yaml
+++ b/argocd/infra/cilium/values.yaml
@@ -22,7 +22,7 @@ ipam:
     
 k8sServiceHost: 192.168.10.100
 k8sServicePort: 6443
-devices: enx207bd2cf23ca,enp3s0,eth0,br0
+devices: eth0
 gatewayAPI:
   enabled: true
   
