--- a/argocd/infra/cilium/values.yaml
+++ b/argocd/infra/cilium/values.yaml
@@ -16,9 +16,9 @@ ingressController:
 rollOutCiliumPods: true
 #ipv4NativeRoutingCIDR: 10.10.8.0/22
 
-# ipam:
-#   operator:
-#     clusterPoolIPv4PodCIDRList: 10.42.0.0/16
+ipam:
+  operator:
+    clusterPoolIPv4PodCIDRList: 10.42.0.0/16
     
 k8sServiceHost: 192.168.10.100
 k8sServicePort: 6443
