--- a/argocd/infra/metallb/kustomization.yaml
+++ b/argocd/infra/metallb/kustomization.yaml
@@ -1,13 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-resources:
-  - manifests/resources.yaml
+# resources:
+#   - manifests/resources.yaml
 
-helmCharts:
-  - name: metallb
-    repo: https://metallb.github.io/metallb
-    version: "0.14.9"
-    releaseName: metallb
-    namespace: metallb
-    valuesFile: ./values.yaml
+# helmCharts:
+#   - name: metallb
+#     repo: https://metallb.github.io/metallb
+#     version: "0.14.9"
+#     releaseName: metallb
+#     namespace: metallb
+#     valuesFile: ./values.yaml
