--- a/argocd/infra/cilium/manifests/bgp.yaml
+++ b/argocd/infra/cilium/manifests/bgp.yaml
@@ -12,10 +12,10 @@ kind: CiliumBGPPeeringPolicy
 metadata:
   name: bgp-peering-policy-worker
 spec:
-  serviceSelector: # this replaces address-pools, instead of defining the range of IPs that can be assigned to LoadBalancer services, now services have to match below selectors for their LB IPs to be announced
-    matchExpressions:
-      - {key: io.cilium/bgp, operator: NotIn, values: ["deny", "false"]}
-      - {key: io.cilium/internal, operator: NotIn, values: ["true"]}
+  # serviceSelector: # this replaces address-pools, instead of defining the range of IPs that can be assigned to LoadBalancer services, now services have to match below selectors for their LB IPs to be announced
+  #   matchExpressions:
+  #     - {key: io.cilium/bgp, operator: NotIn, values: ["deny", "false"]}
+  #     - {key: io.cilium/internal, operator: NotIn, values: ["true"]}
   virtualRouters:
     - localASN: 64512 # Use your cluster's ASN here!
       serviceSelector: # Delete this line to allow all LoadBalancers
