--- a/argocd/media-server/calibre/manifests/service.yaml
+++ b/argocd/media-server/calibre/manifests/service.yaml
@@ -6,6 +6,7 @@ metadata:
   name: calibre
   annotations:
     metallb.io/loadBalancerIPs: 10.10.8.2
+    lbipam.cilium.io/ips: 10.10.8.2
 spec:
   type: LoadBalancer
   ports:
