--- a/argocd/minecraft/manifests/svc.yaml
+++ b/argocd/minecraft/manifests/svc.yaml
@@ -5,6 +5,7 @@ metadata:
   name: mc
   annotations:
     metallb.io/loadBalancerIPs: 10.10.8.7
+    lbipam.cilium.io/ips: 10.10.8.7
   labels:
     service: mc
 spec:
