--- a/argocd/media-server/plex/deploy.yaml
+++ b/argocd/media-server/plex/deploy.yaml
@@ -20,7 +20,7 @@ spec:
       labels:
         app: plex
     spec:
-      hostNetwork: false
+      hostNetwork: true
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
