--- a/argocd/infra/cilium/manifests/gateway.yaml
+++ b/argocd/infra/cilium/manifests/gateway.yaml
@@ -52,21 +52,21 @@ spec:
           from: All
         kinds:
           - kind: HTTPRoute
-# apiVersion: gateway.networking.k8s.io/v1
-# kind: HTTPRoute
-# metadata:
-#   name: http-redirect
-# spec:
-#   parentRefs:
-#     - name: cilium-gateway
-#       sectionName: http
-#   hostnames:
-#     - "*.yanello.net"
-#     - "yanello.net"
-#   rules:
-#     - filters:
-#         - type: RequestRedirect
-#           requestRedirect:
-#             scheme: https
-#             statusCode: 301
-# ---
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: http-redirect # send http traffic to the https listener
+spec:
+  parentRefs:
+    - name: cilium-gateway
+      sectionName: http
+  hostnames:
+    - "*.yanello.internal"
+    - "yanello.internal"
+  rules:
+    - filters:
+        - type: RequestRedirect
+          requestRedirect:
+            scheme: https
+            statusCode: 301
