--- a/argocd/infra/storage/longhorn/kustomization.yaml
+++ b/argocd/infra/storage/longhorn/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 resources:
   - ./manifests/vs.yaml
- # - ./manifests/http-route.yaml
+  - ./manifests/http-route.yaml
   - ./manifests/longhorn-xfs-sc.yaml
   
 generators:
