--- a/argocd/infra/cilium/values.yaml
+++ b/argocd/infra/cilium/values.yaml
@@ -31,7 +31,9 @@ gatewayAPI:
 
 loadBalancer:
   mode: dsr
-  
+  dsrDispatch: opt
+routingMode: native
+
 envoy:
   securityContext:
     capabilities:
