--- a/argocd/infra/cilium/values.yaml
+++ b/argocd/infra/cilium/values.yaml
@@ -32,11 +32,11 @@ loadBalancer:
   mode: dsr
   dsrDispatch: opt
 routingMode: native
-ipv4:
-  enabled: true
-ipMasqAgent:
-  enabled: false
-enableIPv4Masquerade: true
+# ipv4:
+#   enabled: true
+# ipMasqAgent:
+#   enabled: false
+# enableIPv4Masquerade: true
 ipv4NativeRoutingCIDR: 192.168.10.0/24
 
 envoy:
