--- a/argocd/infra/cilium/values.yaml
+++ b/argocd/infra/cilium/values.yaml
@@ -28,16 +28,16 @@ gatewayAPI:
   # enableProxyProtocol: ""
   # externalTrafficPolicy: Local
 
-loadBalancer:
-  mode: dsr
-  dsrDispatch: opt
-routingMode: native
+# loadBalancer:
+#   mode: dsr
+#   dsrDispatch: opt
+# routingMode: native
 # ipv4:
 #   enabled: true
 # ipMasqAgent:
 #   enabled: false
 # enableIPv4Masquerade: true
-ipv4NativeRoutingCIDR: 192.168.10.0/24
+#ipv4NativeRoutingCIDR: 192.168.10.0/24
 
 envoy:
   securityContext:
