--- a/argocd/infra/cilium/values.yaml
+++ b/argocd/infra/cilium/values.yaml
@@ -37,7 +37,7 @@ gatewayAPI:
 # ipMasqAgent:
 #   enabled: false
 # enableIPv4Masquerade: true
-#ipv4NativeRoutingCIDR: 192.168.10.0/24
+ipv4NativeRoutingCIDR: 192.168.10.0/24
 
 envoy:
   securityContext:
