--- a/argocd/infra/cilium/values.yaml
+++ b/argocd/infra/cilium/values.yaml
@@ -31,7 +31,7 @@ gatewayAPI:
 # loadBalancer:
 #   mode: dsr
 #   dsrDispatch: opt
-routingMode: native
+# routingMode: native
 # ipv4:
 #   enabled: true
 # ipMasqAgent:
