--- a/argocd/infra/cilium/values.yaml
+++ b/argocd/infra/cilium/values.yaml
@@ -31,13 +31,14 @@ gatewayAPI:
 # loadBalancer:
 #   mode: dsr
 #   dsrDispatch: opt
-# routingMode: native
+routingMode: native
 # ipv4:
 #   enabled: true
 # ipMasqAgent:
 #   enabled: false
-# enableIPv4Masquerade: true
+enableIPv4Masquerade: true
 ipv4NativeRoutingCIDR: 10.42.0.0/16
+autoDirectNodeRoutes: true
 
 envoy:
   securityContext:
