--- a/argocd/infra/cilium/values.yaml
+++ b/argocd/infra/cilium/values.yaml
@@ -24,7 +24,7 @@ k8sServicePort: 6443
 devices: eth0
 gatewayAPI:
   enabled: true
-  xffNumTrustedHops: 1
+  # xffNumTrustedHops: 2
   # enableProxyProtocol: ""
   # externalTrafficPolicy: Local
 
@@ -39,6 +39,7 @@ routingMode: native
 enableIPv4Masquerade: true
 ipv4NativeRoutingCIDR: 10.42.0.0/16
 autoDirectNodeRoutes: true
+
 
 envoy:
   securityContext:
