--- a/argocd/infra/cilium/manifests/cert.yaml
+++ b/argocd/infra/cilium/manifests/cert.yaml
@@ -1,17 +1,17 @@
-# apiVersion: cert-manager.io/v1
-# kind: Certificate
-# metadata:
-#   name: default-ingress-internal-cert
-# spec:
-#   commonName: yanello.net
-#   dnsNames:
-#   - "*.yanello.net"
-#   - yanello.net
-#   secretName: default-ingress-internal-cert
-#   issuerRef:
-#     name: local-intermediate-ca1-issuer
-#     kind: ClusterIssuer
-#     group: cert-manager.io
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: cilium-public
+spec:
+  commonName: yanello.net
+  dnsNames:
+  - "*.yanello.net"
+  - yanello.net
+  secretName: cilium-public
+  issuerRef:
+    name: letsencrypt-prod
+    kind: ClusterIssuer
+    group: cert-manager.io
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
