--- a/argocd/infra/cilium/manifests/publicGateway.yaml
+++ b/argocd/infra/cilium/manifests/publicGateway.yaml
@@ -1,11 +1,11 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: cilium-private-gateway
+  name: cilium-public-gateway
 spec:
   gatewayClassName: cilium
   addresses:
-    - value: 10.10.8.100 # the ip of the load balancer service
+    - value: 10.10.8.101 
       type: IPAddress
   listeners:
     - name: http
@@ -56,10 +56,10 @@ spec:
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: http-redirect-private # send http traffic to the https listener
+  name: http-redirect-public # send http traffic to the https listener
 spec:
   parentRefs:
-    - name: cilium-private-gateway
+    - name: cilium-public-gateway
       sectionName: http
   hostnames:
     - "*.yanello.net"
